# osgBoost

./: CMakeLists.txt  GenerateTypeLists.lua  InvokeOperator.h  IsOperatorAvailable.h  Operation.h  OperationArity.h  OperatorBase.h  Operators.h
osgTraits/: AddArgType.h  Addition.h  ArithmeticTypes.h  ArityTags.h  BinaryOperators.h  CMakeLists.txt  ComputeCategoryTag.h  ConstructBoundOperation.h  ConstructOperation.h  Division.h  Equality.h  GetCategory.h  GetCompatibleScalar.h  GetDimension.h  GetOperator.h  GetScalar.h  InvokeOperator.h  IsMathOrScalar.h  IsOperatorAvailable.h  LessThan.h  Multiplication.h  Operation.h  OperationArgumentPlaceholder.h  OperationArguments.h  OperationArity.h  OperatorArity.h  OperatorBase.h  Pow.h  PromoteTypeWithScalar.h  Subtraction.h  TypePredicates.h  UnaryMinus.h  UnaryOperators.h
tests/: AddArgtype.cpp  CMakeLists.txt  Construct.cpp  ConstructBound.cpp  InvokeOperator.cpp  IsOperatorAvailable.cpp  OperationArity.cpp  OperatorArity.cpp  test_headercompile.cpp.in  testmain.h
tools/: style-project.cmd  style-project.sh
